# geoOverlap

./: README.md
onedOverset/: createFields.H  octree.H
onedOverset/1DRegions/: createLinks.sh  results.pvsm
onedOverset/1DRegions/0.org/region1/: T
onedOverset/1DRegions/meshes/region1/constant/: regionProperties
onedOverset/1DRegions/meshes/region1/constant/region1/polyMesh/: faces  points
onedOverset/1DRegions/meshes/region1/constant/region2/polyMesh/: owner
onedOverset/1DRegions/meshes/region1/system/: blockMeshDict
onedOverset/1DRegions/meshes/region2/system/: blockMeshDict
onedOverset/1DRegions/meshes/region2/system/region2/: blockMeshDict
onedOverset/1DRegions/system/region1/: fvSchemes
onedOverset/1DRegions/system/region2/: controlDict
onedOverset/Make/: files  options
onedOverset/run/meshes/region1/constant/region2/polyMesh/: neighbour
onedOverset/run/meshes/region2/constant/: transportProperties
onedOverset/run/meshes/region2/constant/region1/polyMesh/: boundary
onedOverset/src/: createMeshes.H  onedOverset.C
twodOverset/run/: data.py  forceComparison.py  switchMesh.sh
twodOverset/run.NS/0/region1/: U  p
twodOverset/run.NS/0/region2/: U  p
twodOverset/run.NS/constant/: transportProperties  turbulenceProperties
twodOverset/run.NS/constant/region1/polyMesh/: boundary  faces  neighbour  owner  pointZones  points
twodOverset/run.NS/constant/region2/: dynamicMeshDict  transportProperties  turbulenceProperties
twodOverset/run.NS/constant/region2/polyMesh/: boundary  cellZones  faceZones  faces  neighbour  owner  points
twodOverset/run.NS/constant/region2/polyMesh/sets/: region2
twodOverset/run.NS/system/: blockMeshDict  controlDict  fvSchemes
twodOverset/run.NS/system/region1/: fvSolution
twodOverset/run.NS/system/region2/: fvSchemes
twodOverset/run/0.org.NBC/region2/: T
twodOverset/run/0/region1/: T
twodOverset/run/constant/region1/polyMesh/: neighbour  owner
twodOverset/run/constant/region2/polyMesh/: faces  neighbour  owner
twodOverset/run/meshes/region1/constant/: RHS
twodOverset/run/meshes/region1/constant/polyMesh/: boundary  faces  points
twodOverset/run/meshes/region1/system/: blockMeshDict  blockMeshDict.fine  blockMeshDict.medium  blockMeshDict.tiny
twodOverset/run/meshes/region2/constant/polyMesh/: boundary  points
twodOverset/run/meshes/region2/constant/region2/polyMesh/: points
twodOverset/run/meshes/region2/system/: blockMeshDict.coarse  blockMeshDict.fine  blockMeshDict.medium  blockMeshDict.tiny
twodOverset/run/system/: controlDict  fvSolution
twodOverset/src/: amgSolver.H  createFields.H  createMatrixAndRHS.H  createMeshes.H  itsSolver.H  postProcessOverset.H  rbf_interp.h  twoDOverset.C  twoDOverset.H
twodOverset/src.NS/: RBFUtilityFunctions.H  UEqn.H  cons.H  createFields.H  createMatrixAndRHS.H  createMeshes.H  fieldContinuityErrs.H  initOverset.H  massContinuityErrs.H  octree.H  oversetUtils.H  pEqn.H  simpleFoam.C
twodOverset/src.NS/Make/: files  options
twodOverset/src.NS/itsol-master/: Changelog  Makefile.inc  README.md  config.status  configure.in
twodOverset/src.NS/itsol-master/examples/: vbiluk.c
twodOverset/src.NS/itsol-master/include/: config.h  config.h.in  indset.h  mat-utils.h  pc-arms2.h  pc-iluk.h  pc-ilutpc.h  pc-vbilut.h  protos-deps.h  solver-bicgstabl.h  solver-fgmres.h
twodOverset/src.NS/itsol-master/src/: Makefile  Makefile.dep  indset.c  pc-iluk.c  pc-pilu.c  pc-vbiluk.c  solver-bicgstab.c  tools.f  utils.c
twodOverset/src.NS/sparseMatrix/Make/: files  options
twodOverset/src.NS/sparseMatrix/Make/linux64GccDPInt32Opt/: options  sourceFiles  sparseMatrix.C.dep  variables
twodOverset/src/Make/: files  options
twodOverset/src/itsol-master/: COPYRIGHT  Makefile  Makefile.inc  Makefile.inc.in  config.status  configure
twodOverset/src/itsol-master/examples/: Makefile  arms.c  iluc.c  iluk.c  ilut.c  simplest.c  solver.c  vbilut.c
twodOverset/src/itsol-master/include/: Makefile  data-types.h  itsol.h  pc-ilut.h  pc-ilutc.h  pc-pilu.h  pc-vbiluk.h  solver-bicgstab.h  utils.h
twodOverset/src/itsol-master/src/: itsol.c  mat-utils.c  pc-arms2.c  pc-ilut.c  pc-ilutc.c  pc-ilutpc.c  pc-vbilut.c  solver-bicgstabl.c  solver-fgmres.c
twodOverset/src/sparseMatrix/: exceptions.H  sparseMatrix.C  sparseMatrix.H
twodOverset/src/sparseMatrix/Make/: options
